# Aito-Vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: bounding_box.frag  bounding_box.vert
src/: CMakeLists.txt  aito.h  app.cpp  app.h  bounding_box_render_system.cpp  bounding_box_render_system.h  bounds.h  buffer.cpp  buffer.h  camera.cpp  camera.h  descriptor.cpp  descriptor.h  device.cpp  device.h  frame_info.h  keyboardController.cpp  keyboardController.h  logger.cpp  logger.h  main.cpp  object.h  pch.h  pipeline.cpp  pipeline.h  point_light_system.cpp  point_light_system.h  renderer.cpp  renderer.h  shape.cpp  shape.h  simple_render_system.cpp  simple_render_system.h  swapchain.cpp  swapchain.h  time.h  transform.cpp  transform.h  utils.h  vecmath.h  (+2 more)
